syntax = "proto3";
package pb;
option go_package = ".";

// Service
service EventStore {
    rpc GetEvents(EventFilter) returns (EventResponse) {}
    rpc CreateEvent (Event) returns (Response) {}
}

// Messages
message Event {
    string event_id = 1;
    string event_type = 2;
    string aggregate_id = 3;
    string aggregate_type = 4;
    string event_data = 5;
    string channel = 6; // optional field
}

message Response {
    bool is_success = 1;
    string error = 2;
}

message EventFilter {
    string event_id = 1;
    string aggregate_id = 2;
}

message EventResponse {
    repeated Event events = 1;
}